@@ -88,6 +88,7 @@ export(abbreviateTimeLabels,
        decodeTime,
        despike,
        detrend,
+       download.amsr,
        drawDirectionField,
        drawIsopycnals,
        drawPalette,
